Added more security fixes, changed website texts, changed contact form

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -3,10 +3,10 @@
       <div class="container mb-4">
         <div class="row align-items-center">
           <div class="col-lg-9">
-            <h1 class="hero-heading mb-1 text-bold">Do <span class="text-warning">cloud</span> or do not. There is no try.</h1>
+            <h1 class="hero-heading mb-1 text-bold">Your <span class="text-warning">cloud</span> journey, our business.</h1>
             <div class="row">
               <div class="col-lg-10 mt-2">
-                <p class="lead text-muted mt-1 mb-4">Things work differently in the cloud. We know how. We're a boutique consultancy focused on cloud technology. We can help you make the right choices and deliver business value faster.</p>
+                <p class="lead text-muted mt-1 mb-4">We're a boutique consultancy solving complex problems using cloud technology. We partner with our clients to help them establish a cloud native mindset and a future-proof technology stack.</p>
               </div>
             </div>
             <div class="row">
