--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -7,6 +7,7 @@
         <div class="block">
 
             <h2>{{ .box.title }}</h2>
+            <p>Whenever you're nearby our office, stop by for a good cup of coffee. We'd love to meet you!</p>
             <ul class="list-unstyled address-block">
               <li>
                 <i class="fa fa-map-marker mt-1 mr-2"></i>{{ .box.address }}
@@ -25,8 +26,11 @@
               </li>
             {{ end }}
             </ul>
+        </div>
+      </div>
+      <div class="col-md-6 col-sm-12">
             {{ with .gmaps}}
-            <div class="block mt-3">
+            <div class="block">
               <h2>{{ .title }}</h2>
               <div class="google-map">  
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2450.622344457853!2d5.077285951700536!3d52.10480437963812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c66fa9fb18e4b3%3A0x87b3c199ee665619!2sSkyworkz!5e0!3m2!1snl!2snl!4v1557736878153!5m2!1snl!2snl" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -36,35 +40,14 @@
             {{ end }}
         </div>
       </div>
-      <div class="col-md-6 col-sm-12">
+      <div class="row">
+      <div class="col-12">
           <div class="block">
-              <h2>Send us a message</h2>
-            <form name="contact-form" data-netlify="true" method="POST">
-              <p class="d-none">
-                  <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
-              </p>
-              <div class="form-group">
-                <input type="text" name="name" class="form-control" placeholder="{{ .form.name }}">
-              </div>
-              <div class="form-group">
-                <input type="text" name="email" class="form-control" placeholder="{{ .form.email }}">
-              </div>
-              <div class="form-group">
-                <input type="text" name="subject" class="form-control" placeholder="{{ .form.subject }}">
-              </div>
-              <div class="form-group">
-                  <textarea name="message" class="form-control" rows="3" placeholder="{{ .form.message }}"></textarea>
-                </div>
-                <button class="form-control btn btn-default btn-outline-success" type="submit">{{ .form.button }}</button>
-            </form>
+            <h2>Book a meeting</h2>
+            <iframe src="https://x.ai/calendar/bastichelaar/phone" style="margin: 0; padding: 0; border: 0;width:100%;min-height:800px;" scrolling="auto" > </iframe>
           </div>
         </div>
-    </div>
-    <div id="contact-box" class="row">
-      <div class="col-md-6 col-sm-12">
-
-      </div>
-      
+        </div>
     </div>
   </div>
 </section>
